Cropped the main picture in hopes of fixing display issues

--- a/style.css
+++ b/style.css
@@ -533,7 +533,10 @@ footer {
 .portfolio_item_title {
     font: 300% 'Helvetica Neue', Helvetica, Arial, sans-serif;
     
-}    
+}
+.portfolio_item:hover .rollover-text {
+    bottom: 30px;
+}
 .box img {
     max-height: 100%;
     max-width: 100%;
@@ -556,7 +559,10 @@ footer {
 .portfolio_item_title {
     font: 200% 'Helvetica Neue', Helvetica, Arial, sans-serif;
     
-}    
+} 
+.portfolio_item:hover .rollover-text {
+    bottom: 25px;
+}
 .portfolio {
     position: relative;
     min-height: 480px;
